--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     {
       "src": "Neuro-Audio.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
